# shortest-path-chess

./: .gitignore  Allesausfuehren.sh  CMakeLists.txt  Chessboard.cpp  Chessboard.h  ChessboardTest.cpp  Color.h  Edge.cpp  Edge.h  EdgeTest.cpp  Field.cpp  Field.h  FieldTest.cpp  Graph.cpp  Graph.h  GraphTest.cpp  InputHelper.cpp  InputHelper.h  InputHelperTest.cpp  King.cpp  King.h  Knight.cpp  Knight.h  KnightTest.cpp  Node.cpp  Node.h  NodeTest.cpp  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  README.md  main.cpp  runTests.sh
